--- a/TravelRecordApp/TravelRecordApp/MainPage.xaml
+++ b/TravelRecordApp/TravelRecordApp/MainPage.xaml
@@ -6,6 +6,11 @@
 
     <StackLayout VerticalOptions="Center"
                  Margin="20">
+        <Image x:Name="iconImage"
+               Aspect="AspectFit"
+               HorizontalOptions="FillAndExpand"
+               HeightRequest="100"
+               Margin="0,0,0,25"/>
         <Entry x:Name="emailEntry"
                Placeholder="Email address"
                TextColor="{StaticResource blueColor}"
@@ -17,7 +22,7 @@
                Text="Test"
                IsPassword="True"/>
         <Button x:Name="LoginButton"
-                Margin="0,50,0,0"
+                Margin="0,25,0,0"
                 Text="Log in"
                 Clicked="LoginButton_Clicked"
                 Style="{StaticResource normalButton}"/>
